--- a/src/app/book-list/book/book.component.scss
+++ b/src/app/book-list/book/book.component.scss
@@ -1,9 +1,13 @@
 .dashboard-card {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   top: 15px;
   left: 15px;
   right: 15px;
   bottom: 15px;
+  justify-content: space-between;
+  background: rgb(190, 118, 118);
 }
 
 .more-button {
@@ -14,4 +18,9 @@
 
 .dashboard-card-content {
   text-align: center;
+}
+.dashboard-card-actions{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
