feat: add component cart

--- a/src/app/book-nav/book-nav.component.html
+++ b/src/app/book-nav/book-nav.component.html
@@ -13,6 +13,7 @@
       <a mat-list-item routerLink="/book-list" routerLinkActive="active">
         Books
       </a>
+      <a mat-list-item routerLink="/cart" routerLinkActive="active">Cart</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
