--- a/src/app/book-list/book/book.component.html
+++ b/src/app/book-list/book/book.component.html
@@ -22,7 +22,12 @@
   </mat-card-content>
   <mat-card-actions class="dashboard-card-actions">
     <div>${{ book.price }}</div>
-    <button mat-raised-button color="primary" (click)="onBuy(book.id)">
+    <button
+      mat-raised-button
+      color="primary"
+      [disabled]="!book.isAvailable"
+      (click)="onBuy(book)"
+    >
       Buy
     </button>
   </mat-card-actions>
