--- a/src/app/book-nav/book-nav.component.html
+++ b/src/app/book-nav/book-nav.component.html
@@ -10,9 +10,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/" routerLinkActive="active">HOME</a>
-      <a mat-list-item routerLink="/book-list" routerLinkActive="active">
-        Books
-      </a>
+      <a mat-list-item routerLink="/book-list" routerLinkActive="active"> Books </a>
       <a mat-list-item routerLink="/cart" routerLinkActive="active">Cart</a>
     </mat-nav-list>
   </mat-sidenav>
