--- a/src/app/cart/cart-item/cart-item.component.html
+++ b/src/app/cart/cart-item/cart-item.component.html
@@ -17,23 +17,17 @@
   </mat-card-header>
   <mat-card-content class="dashboard-card-content">
     <div>
-      <h2>
-        Quantity: <span>{{ book.quantity }}</span>
-      </h2>
-      <button mat-icon-button (click)="onAddItem(book)">
+      <h2>Quantity: <span>{{ book.quantity }}</span></h2>
+      <button mat-icon-button (click)="onAddItem(book)" [disabled]="!book.isAvailable">
         <mat-icon>add_circle_outline</mat-icon>
       </button>
       <button mat-icon-button (click)="onMinesItem(book)">
         <mat-icon>remove_circle_outline</mat-icon>
       </button>
     </div>
-    <h2>
-      Price: <span>{{ book.price }}</span>
-    </h2>
+    <h2>Price: <span>{{ book.price }}</span></h2>
   </mat-card-content>
   <mat-card-actions class="dashboard-card-actions">
-    <h1>
-      Sum: <span>${{ book.price * book.quantity }}</span>
-    </h1>
+    <h1>Sum: <span>${{ book.price * book.quantity }}</span></h1>
   </mat-card-actions>
 </mat-card>
