feat: add services

--- a/src/app/book-nav/book-nav.component.html
+++ b/src/app/book-nav/book-nav.component.html
@@ -25,7 +25,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>book-shop</span>
+      <h1 #appTitle></h1>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
