--- a/src/app/book-nav/book-nav.component.html
+++ b/src/app/book-nav/book-nav.component.html
@@ -25,7 +25,8 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <h1 #appTitle></h1>
+      <h1 #appTitle [ngStyle]="{'margin-right': '20px'}"></h1>
+      <h3>Time: {{ time | async | date :'medium'}}</h3>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
